Guard command tab completion